Minor Text / Logo Fixes to Stop Overlapping

--- a/mern/client/src/App.css
+++ b/mern/client/src/App.css
@@ -102,6 +102,7 @@ body {
     color:#f7e135;
     font-style:italic;
     text-shadow:2px 2px 4px rgba(0,0,0,.5);
+    padding: 0 45px;
     transform:scaleX(1.5);
     transition: all 0.3s ease;
     text-align: center;
@@ -141,6 +142,7 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     font-weight: 800;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .nav-icon-btn:hover {
